--- a/SIGIT/Views/Empleados/Details.cshtml
+++ b/SIGIT/Views/Empleados/Details.cshtml
@@ -3,16 +3,11 @@
 @{
     Layout = null;
 
-    // Concatenamos el nombre completo
-    var nombreCompleto = string.Join(" ", new[] { Model.Nombre, Model.Apellido }
+    //PREPARAMOS LAS VARIABLES PARA EL CORREO
+
+    var nombreCompleto = string.Join(" ", new[] { Model.Nombre, Model.SegundoNombre, Model.Apellido, Model.SegundoApellido }
         .Where(s => !string.IsNullOrWhiteSpace(s)));
 
-    // Creamos el enlace 'mailto' (solo con destinatario y asunto)
-    var correoDestino = Model.CorreoPersonal;
-    var asunto = "Notificación de Cuentas - SIGIT";
-    var mailtoHref = $"mailto:{correoDestino}?subject={System.Net.WebUtility.UrlEncode(asunto)}";
-
-    // Creamos el CUERPO del correo que se copiará al portapapeles
     var bodyBuilder = new System.Text.StringBuilder();
     bodyBuilder.AppendLine($"Cordial saludo, {nombreCompleto}");
     bodyBuilder.AppendLine();
@@ -27,106 +22,81 @@
     bodyBuilder.AppendLine("Tenga presente que los usuarios y contraseñas son personales e intransferibles, abstenerse de compartir esta información ya que esto va en contra de las normas de seguridad de la información.");
     bodyBuilder.AppendLine();
     bodyBuilder.AppendLine("DATOS DEL USUARIO PARA NOTIFICACIONES");
+
     bodyBuilder.AppendLine($"Correo de notificaciones: {Model.CorreoPersonal}");
-    bodyBuilder.AppendLine($"Teléfono registrado para comunicaciones: {Model.Celular}");
-    bodyBuilder.AppendLine($"Área: {Model.Area.NombreArea}");
-    bodyBuilder.AppendLine($"Ciudad: {Model.Ciudad.NombreCiudad}");
-    bodyBuilder.AppendLine($"Compañía: {Model.Compania.NombreCompania}");
+    bodyBuilder.AppendLine($"Área: {Model.Area?.NombreArea}");
+    bodyBuilder.AppendLine($"Cargo: {Model.Cargo?.NombreCargo}");
+    bodyBuilder.AppendLine($"Ciudad: {Model.Ciudad?.NombreCiudad}");
+    bodyBuilder.AppendLine($"Compañía: {Model.Compania?.NombreCompania}");
+    bodyBuilder.AppendLine($"Estatus: {Model.Estatus?.NombreEstatus}");
     bodyBuilder.AppendLine();
     bodyBuilder.AppendLine("CUENTAS ASIGNADAS:");
 
-    foreach (var cuenta in Model.CuentasEmpleados)
+    if (Model.CuentasEmpleados != null) // Añadido check de nulidad
     {
-        bodyBuilder.AppendLine($"Aplicación: {cuenta.Aplicacion.NombreAplicacion}");
-        bodyBuilder.AppendLine($"Usuario: {cuenta.Usuario}");
-        bodyBuilder.AppendLine($"Contraseña: {cuenta.Contrasena}");
-        bodyBuilder.AppendLine();
+        foreach (var cuenta in Model.CuentasEmpleados)
+        {
+            bodyBuilder.AppendLine($"Aplicación: {cuenta.Aplicacion?.NombreAplicacion}");
+            bodyBuilder.AppendLine($"Usuario: {cuenta.Usuario}");
+            bodyBuilder.AppendLine($"Contraseña: {cuenta.Contrasena}");
+            bodyBuilder.AppendLine();
+        }
     }
-
     var emailBody = bodyBuilder.ToString();
+
+    var correoDestino = Model.CorreoPersonal;
+    var asunto = "Credenciales acceso aplicaciones Autofinanciera y Fonbienes";
+    var mailtoHref = $"mailto:{correoDestino}?subject={System.Net.WebUtility.UrlEncode(asunto)}";
 }
 
 <div class="modal-body">
+
+    @Html.AntiForgeryToken()
+
     <div>
         <dl class="row">
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Cedula)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Cedula)
-            </dd>
-            <dt class="col-sm-3">
-                Nombre Completo
-            </dt>
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Cedula)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Cedula)</dd>
+
+            <dt class="col-sm-3">Nombre Completo</dt>
             <dd class="col-sm-9">
                 @string.Join(" ", new[] { Model.Nombre, Model.SegundoNombre, Model.Apellido, Model.SegundoApellido }.Where(s => !string.IsNullOrWhiteSpace(s)))
             </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Celular)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Celular)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.CorreoPersonal)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.CorreoPersonal)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.FechaIngreso)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.FechaIngreso)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.FechaRetiro)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.FechaRetiro)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.FechaRegistro)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.FechaRegistro)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Area)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Area.NombreArea)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Cargo)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Cargo.NombreCargo)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Ciudad)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Ciudad.NombreCiudad)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Compania)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Compania.NombreCompania)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Estatus)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Estatus.NombreEstatus)
-            </dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Celular)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Celular)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.CorreoPersonal)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.CorreoPersonal)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.FechaIngreso)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.FechaIngreso)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.FechaRetiro)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.FechaRetiro)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.FechaRegistro)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.FechaRegistro)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Area)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Area.NombreArea)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Cargo)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Cargo.NombreCargo)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Ciudad)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Ciudad.NombreCiudad)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Compania)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Compania.NombreCompania)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Estatus)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Estatus.NombreEstatus)</dd>
         </dl>
     </div>
     <hr />
 
     <h3>Cuentas asignadas</h3>
-
     @if (Model.CuentasEmpleados.Any())
     {
         <table class="table table-striped table-sm" style="font-size: 0.9em;">
@@ -143,50 +113,75 @@
                     <tr>
                         <td>@Html.DisplayFor(modelItem => cuenta.Aplicacion.NombreAplicacion)</td>
                         <td>@Html.DisplayFor(modelItem => cuenta.Usuario)</td>
-
                         <td>@Html.DisplayFor(modelItem => cuenta.Contrasena)</td>
                     </tr>
                 }
             </tbody>
         </table>
-
     }
     else
     {
         <p class="text-muted">Este empleado no tiene cuentas asignadas.</p>
     }
 
-<textarea id="emailNotificationBody" style="position: absolute; left: -9999px; opacity: 0;" readonly>@emailBody</textarea>
-
+    <textarea id="emailNotificationBody" style="position: absolute; left: -9999px; opacity: 0;" readonly>@emailBody</textarea>
 </div>
 
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
-    <button type="button" id="copyEmailButton" class="btn btn-primary">Copiar Notificación</button>
-    <a href="@mailtoHref" target="_blank" class="btn btn-success">Abrir Correo</a>
+    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="bi bi-door-open-fill"></i>Cerrar</button>
+    <button type="button" id="copyEmailButton" class="btn btn-primary"><i class="bi bi-clipboard-check"></i> Copiar Notificación</button>
+    <button type="button" id="sendEmailButton" class="btn btn-success" data-id="@Model.EmpleadoId"><i class="bi bi-send-plus-fill"></i> Enviar por Correo</button>
 </div>
 
 
 <script>
     $(document).ready(function() {
+
+        // Script para "Copiar"
         $("#copyEmailButton").on("click", function() {
             var copyText = document.getElementById("emailNotificationBody");
             copyText.select();
-            copyText.setSelectionRange(0, 99999);
+            document.execCommand("copy");
+            var originalText = $(this).text();
+            $(this).text("¡Copiado!").addClass("btn-success").removeClass("btn-primary");
+            setTimeout(() => {
+                 $(this).text(originalText).addClass("btn-primary").removeClass("btn-success");
+            }, 2000);
+        });
 
-            try {
-                document.execCommand("copy");
+        // SCRIPT DE ENVÍO DE CORREO
+        $("#sendEmailButton").on("click", function() {
+            var button = $(this);
+            var empleadoId = button.data("id");
 
-                var originalText = $(this).text();
-                $(this).text("¡Copiado!").addClass("btn-success").removeClass("btn-primary");
+            // Buscamos el token por su NOMBRE, que es como lo genera el helper
+            var token = $('input[name="__RequestVerificationToken"]').val();
 
-                setTimeout(() => {
-                     $(this).text(originalText).addClass("btn-primary").removeClass("btn-success");
-                }, 2000);
+            button.prop("disabled", true).text("Enviando...");
 
-            } catch (err) {
-                alert("Error al copiar. Por favor, cópielo manualmente.");
-            }
+            $.ajax({
+                url: '@Url.Action("EnviarNotificacion", "Empleados")/' + empleadoId,
+                type: 'POST',
+                headers: {
+                    // Enviamos el token que acabamos de leer
+                    'RequestVerificationToken': token
+                },
+                success: function(response) {
+                    if (response.success) {
+                        button.text("¡Enviado!").addClass("btn-primary").removeClass("btn-success");
+                        setTimeout(() => {
+                             button.prop("disabled", false).text("Enviar por Correo").addClass("btn-success").removeClass("btn-primary");
+                        }, 2000);
+                    } else {
+                        alert(response.message);
+                        button.prop("disabled", false).text("Enviar por Correo");
+                    }
+                },
+                error: function(xhr, status, error) {
+                    alert("Error de red al enviar el correo: " + xhr.statusText);
+                    button.prop("disabled", false).text("Enviar por Correo");
+                }
+            });
         });
     });
 </script>
