--- a/SIGIT/Views/Empleados/Listado.cshtml
+++ b/SIGIT/Views/Empleados/Listado.cshtml
@@ -61,9 +61,12 @@
                 </td>
                 <td>
                     
-                    <a class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", "Empleados", new { id = item.Id })" data-title="Editar Empleado">Editar</a>
+                    <a class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", "Empleados", new { id = item.Id })" data-title="Editar Empleado">
+                        <i class="bi bi-pencil-square"></i>Editar
+                    </a>
 
-                    <a class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", "Empleados", new { id = item.Id })" data-title="Detalles del empleado">Detalles</a>
+                    <a class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", "Empleados", new { id = item.Id })" data-title="Detalles del empleado">
+                        <i class="bi bi-ui-checks"></i>Detalles</a>
 
                     @if (User.IsInRole("Administrador"))
                     {
